--- a/index.html
+++ b/index.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
 
-<html>
+  <html>
 
-  <head>
-  
+    <head>
+
     <title>Danajae Ballard</title>
-    
-    <link rel="stylesheet" type="text/css" href="bootstrap.css">
-  
-  </head>
-  
-  <body>
-  
-    <h1>Danajae Ballard</h1>
 
-  </body>
-  
-</html>
+    <link rel="stylesheet" type="text/css" href="bootstrap.css">
+
+    </head>
+
+    <body>
+
+      <h1>Danajae Ballard</h1>
+
+      <div class="container">
+
+      <div class="navbar">
+
+        <div class="navbar-inner">
+
+          <ul class="nav">
+
+            <li class="active"><a href="home.html">Home</a></li>
+
+            <li><a href="about.html">About</a></li>
+
+            <li><a href="resume.html">Resume</a></li>
+
+            <li><a href="experience.html">Experience</a></li>
+
+         </ul>
+
+        </div>
+
+      </div>
+
+      </div>
+          
+    </body>
+
+  </html>
