--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,30 @@
   </head>
 
   <body>
+  
+     <div class="container">
+
+      <div class="navbar">
+
+        <div class="navbar-inner">
+
+          <ul class="nav">
+
+            <li class="active"><a href="home.html">Home</a></li>
+
+            <li><a href="about.html">About</a></li>
+
+            <li><a href="resume.html">Resume</a></li>
+
+            <li><a href="experience.html">Experience</a></li>
+
+         </ul>
+
+        </div>
+
+      </div>
+
+      </div>
 
     <h1>Education</h1>
 
