--- a/resume.html
+++ b/resume.html
@@ -3,14 +3,14 @@
 <html>
 
   <head>
-
-    <p>Danajae Ballard</p>
     
     <link rel="stylesheet" type="text/css" href="style.css">
 
   </head>
 
   <body>
+  
+     <h1>Resume</h1>
   
      <div class="container">
 
@@ -20,11 +20,11 @@
 
           <ul class="nav">
 
-            <li class="active"><a href="home.html">Home</a></li>
+            <li><a href="home.html">Home</a></li>
 
             <li><a href="about.html">About</a></li>
 
-            <li><a href="resume.html">Resume</a></li>
+            <li class="active"><a href="resume.html">Resume</a></li>
 
             <li><a href="experience.html">Experience</a></li>
 
