--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
   
     <title>Resume</title>
     
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap.css">
 
   </head>
 
