--- a/experience.html
+++ b/experience.html
@@ -13,7 +13,7 @@
   
   <body>
   
-    <h1>My Experience with Englewood Codes....</h1>
+    <h1>My Experience</h1>
     
     <div class="container">
 
