--- a/about.html
+++ b/about.html
@@ -11,8 +11,12 @@
     </head>
 
     <body>
+    
+    <div class="page-header">   
 
       <h1>About me</h1>
+      
+    </div>
 
       <div class="container">
 
