--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     </head>
 
     <body>
+    
+    <div class="page-header">
 
       <h1>Danajae Ballard</h1>
+      
+    </div>
 
       <div class="container">
 
