--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
           <ul class="nav">
 
-            <li class="active"><a href="home.html">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
 
             <li><a href="about.html">About</a></li>
 
