--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
           <ul class="nav">
 
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
 
             <li class="active"><a href="about.html">About</a></li>
 
