--- a/experience.html
+++ b/experience.html
@@ -27,7 +27,7 @@
 
           <ul class="nav">
 
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
 
             <li><a href="about.html">About</a></li>
 
