--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
 
           <ul class="nav">
 
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
 
             <li><a href="about.html">About</a></li>
 
