--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         </div>
 
       </div>
+      
+        <h4>"The secret of our success is that we never, never give up."- Willma ManKiller</h4>
 
       </div>
           
