--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
       <div class="page-header">
 
-        <h1>Danajae Ballard</h1>
+        <h1>Welcome To My Website</h1>
       
       </div>
 
