--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Danajae Ballard</title>
 
-    <link rel="stylesheet" type="text/css" href="bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     </head>
 
