--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 
     <title>Home</title>
 
-    <link rel="stylesheet" type="text/css" href="bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     </head>
 
