--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,7 @@
   
     <title>Experience</title>
     
-    <link rel="stylesheet" type="text/css" href="bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     
   
   </head>
