--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       </div>
       
-        <h4>"The secret of our success is that we never, never give up."- Willma ManKiller</h4>
+        <h4>"The secret of our success is that we never, never give up."- Willma Pearl</h4>
 
       </div>
           
