--- a/resume.html
+++ b/resume.html
@@ -41,10 +41,10 @@
       </div>
 
     <h1>Education</h1>
-
-    <h3>Chicago High School for Agricultural Sciences</h3>
     
     <ul>
+
+    <li>Chicago High School for Agricultural Sciences</li>
 
     <li>2011-2015</li>
     
