--- a/experience.html
+++ b/experience.html
@@ -5,6 +5,8 @@
 	<head>
 
 		<title>Twitter Bootstrap Carousel</title>
+		
+		<link rel="stylesheet" type="text/css" href="style.css">
 
 		<link rel="stylesheet" type="text/css" href="bootstrap.css">
 
