--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
       
       <h2>Bio</h2>
 
-      <h4> My name is Danajae’ Ballard and I am 16 years old. I was born and raised in Chicago IL. I attended Miles Davis academy elementary school up until 3rd grade then I transferred to Gunsaulus Scholastic Academy. When I graduated in 2011 I went to Chicago High School for Agricultural Sciences. During my sophomore year there I became interested in Ag Finance. We learned how to write checks, and how to handle other financial business. We also learned how to write a resume. I chose this class to be my pathway for the last two years of high school because I think it is interesting and I also think that the knowledge that I gain in this class could be used in the future. I have not chosen a college that I would like to attend but I know that it will be one in the city of Chicago. I would like to stay in Chicago and start my own business and also make plans for my future career.</h4>
+      <h4> My name is Danajae’ Ballard and I am 16 years old. I was born and raised in Chicago IL. I attended Miles Davis academy elementary school up until 3rd grade then I transferred to Gunsaulus Scholastic Academy. When I graduated in 2011 I went to Chicago High School for Agricultural Sciences. During my sophomore year, I became interested in Agricultural Finance. I learned how to write checks, how to handle other financial business and i also learned how to write a resume. I chose Agricultural Finance because  it is interesting and the knowledge that I gain will be useful in the future. I have not found a college to attend after High School however it would be one in the city of Chicago. After High School i want to start making plans for my future career.</h4>
 
       <h2>Fun Facts</h2>
       
