--- a/resume.html
+++ b/resume.html
@@ -96,6 +96,8 @@
     <h1>Volunteer Experience</h1>
 
     <ul>
+    
+      <li>Back to school event: August 2013</li>
 
       <li>Tall tree Arboretum: February 2013 </li>
 
