--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
 
     <h1>Experience</h1>
 
-    <h3>Englewood Codes:</h3><h5>July-August 2013</h5>
+    <h3>Englewood Codes</h3><h5>July-August 2013</h5>
 
     <ul>
 
